fix: prevent dragging from moving x-overflow

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -14,6 +14,7 @@ body {
     background-size: auto;
 	background-size: 1132px 1014px;
 	color: $blackish;
+	overflow-x: hidden;
 }
 
 a {
